Fix spacing between intro text and image

--- a/style.css
+++ b/style.css
@@ -190,13 +190,6 @@ body {
 
 
 
-.section {
-    padding: 0px 10vw;
-    justify-content: space-between;
-    display: flex;
-    align-items: center;
-    padding: 64px 10vw;
-}
 
 
 
